2012-09-21  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: fix missing conversion to internal encoding (UTF-8)
      if we receive IA5/ASCII payload content.
      Thanks to Donald Jackson <dj at kannel.org> for spotting this.
  
2012-08-31  Stipe Tolj  <stolj at kannel.org>
    * gwlib/dict.[ch]: added function dict_duplicate() allowing an easy
      logical content duplication of an existing Dict structure, added
      functions dict_traverse[_sorted]() which allow in Dict traversal without
      locking the Dict logically outside, before going into a traversal loop.
      The sorted version allows to pre-sort the data elements of the Dict
      via a custom sorting function, then traversing the elements in this
      sorted order.
      
2012-08-31 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.[ch]: added two new functions: octstr_str_search and octstr_str_rsearch.

2012-08-31 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_http.c: fixed segfault produced by last commit.

2012-08-29 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/http/*.c, gw/smsc/smsc_http.c: splitted HTTP SMSC submodules into files.
      This allow us to reduce code in HTTP SMSC itself and prepare this SMSC for
      dynamicaly loading of submodules.
      No behavior change in any implementation.

2012-08-22 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.c: replaced old hash funtion with hash from Robert Sedgewick.

2012-08-06 Andreas Fink <andreas at fink.org>
    * gw/smsc/smsc_at.c: fixed a bug which crashed bearerbox if no
      modem definition was used in the config.

2012-08-06  Stipe Tolj  <stolj at kannel.org>
    * test/test_dict.c: add a second Dict to cross-key check, testing value
      consistancy.
      
2012-08-06  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr_spool.c: reduce code complexity be re-using the essential parts.
    
2012-08-06  Stipe Tolj  <stolj at kannel.org>